fix overlap icon on sub-menu

--- a/star_ecommerce/web-tinhocngoisao/wp-content/themes/online-shop-child/private/scss/_page.scss
+++ b/star_ecommerce/web-tinhocngoisao/wp-content/themes/online-shop-child/private/scss/_page.scss
@@ -247,7 +247,7 @@ header#masthead {
     background: red;
     color: white;
     text-align: center;
-    z-index: 100;
+    z-index: 1;
     font-size: 8px;
     white-space: nowrap;
     font-weight: bold;
