--- a/star_ecommerce/web-tinhocngoisao/wp-content/themes/online-shop-child/private/scss/_pdp.scss
+++ b/star_ecommerce/web-tinhocngoisao/wp-content/themes/online-shop-child/private/scss/_pdp.scss
@@ -89,7 +89,7 @@
                         right: 52px;
                         top: 10px;
                         margin: 0;
-                        z-index: 100;
+                        z-index: 1;
                     }
                 }
             }
